[package]
name = "dayone_zola"
version = "0.1.0"
authors = ["Martin Hartl <martin@hartl.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
json = "0.12"
toml = "0.5.6"
serde_json = "1.0"
chrono = { version = "0.4.11", features = ["serde"] }